# AsioChatRoom

./: .gitignore  CMakeLists.txt  README.md  setup.txt
apps/: CMakeLists.txt  CustomMsgTypes.h  SimpleClient.cpp  SimpleServer.cpp  app.cpp
apps/Client/: Client.h  ClientApp.cpp  ClientInfo.h  Message.h  SimpleClient.cpp  SimpleClient.h  Ui.h
apps/Client/Ui/: Ui.h
apps/Server/: ClientInfo.h  Message.h  Server.cpp  SimpleServer.cpp
include/: CMakeLists.txt
include/NetCommon/: FwNet.h  NetClient.h  NetCommon.h  NetConnection.h  NetMessage.h  NetServer.h  NetTsQueue.h
include/mylib/: lib.h
src/: CMakeLists.txt  lib.cpp
